# Medical_Appointment_Scheduling_API

./: .flake8  .gitignore  CHALLENGE_LOG.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci-prod.yml  cicd.yml
app/: permissions.py  settings.py  urls.py
authentication/: urls.py
consultations/: models.py  serializers.py  tests.py  urls.py  views.py
consultations/migrations/: 0001_initial.py  0002_alter_consultation_options_remove_consultation_date_and_more.py
doctors/: models.py  serializers.py  tests.py  urls.py  views.py
doctors/migrations/: 0001_initial.py  0002_doctor_created_at_doctor_updated_at.py
