[tool.poetry]
name = "Medical_Appointment_Scheduling_API"
version = "0.1.0"
description = "API Django para gestão de doutores"
authors = ["Kaio Herculano <kaioherculano12@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.9.1"
Django = "5.2.4"
djangorestframework = "3.16.0"
djangorestframework-simplejwt = "5.5.0"
PyJWT = "2.9.0"
sqlparse = "0.5.3"
tzdata = "2025.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
